fix: adding even more spacing around links on mobile

--- a/css/stylesheet-mobile-override.css
+++ b/css/stylesheet-mobile-override.css
@@ -16,8 +16,8 @@ body {
 	margin-bottom: calc(var(--banner-height) + var(--banner-margin));
 }
 
-a {
-	line-height: 2.5em;
+blockquote a {
+	line-height: 4.5em;
 }
 
 #banner {
